--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,14 @@ server.forward-headers-strategy=framework
 
 # Default metadata for outbound responses
 module.response.webhook-url=${MODULE_RESPONSE_WEBHOOK_URL:https://matching-squad.com/webhook}
-module.response.squad-name=${MODULE_RESPONSE_SQUAD_NAME:matching-squad}
+module.response.team-name=${MODULE_RESPONSE_TEAM_NAME:matching}
+
+# Matching integration auth
+integrations.matching.base-url=${MATCHING_BASE_URL:https://nonprodapi.uade-corehub.com}
+integrations.matching.api-key=${MATCHING_API_KEY:}
+integrations.matching.subscribe-path=${MATCHING_SUBSCRIBE_PATH:/subscribe}
+integrations.matching.ack-path=${MATCHING_ACK_PATH:/messages/{msgId}/ack}
+integrations.matching.auto-subscribe-enabled=${MATCHING_AUTO_SUBSCRIBE_ENABLED:true}
+integrations.matching.auto-subscriptions[0].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_0:search}
+integrations.matching.auto-subscriptions[0].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_0:test}
+integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:create}
