prueba conexion con core

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,15 +16,15 @@ management.endpoint.health.probes.enabled=true
 server.forward-headers-strategy=framework
 
 # Default metadata for outbound responses
-module.response.webhook-url=${MODULE_RESPONSE_WEBHOOK_URL:https://matching-squad.com/webhook}
-module.response.team-name=${MODULE_RESPONSE_TEAM_NAME:matching}
+module.response.webhook-url=${MODULE_RESPONSE_WEBHOOK_URL:http://alb-stg-31795251.us-east-2.elb.amazonaws.com/api/webhook}
+module.response.team-name=${MODULE_RESPONSE_TEAM_NAME:central}
 
 # Matching integration auth
 integrations.matching.base-url=${MATCHING_BASE_URL:https://nonprodapi.uade-corehub.com}
-integrations.matching.api-key=${MATCHING_API_KEY:}
+integrations.matching.api-key=${MATCHING_API_KEY:ch_2f54f2dbfc0f4afd9d07555cc394624b}
 integrations.matching.subscribe-path=${MATCHING_SUBSCRIBE_PATH:/subscribe}
 integrations.matching.ack-path=${MATCHING_ACK_PATH:/messages/{msgId}/ack}
 integrations.matching.auto-subscribe-enabled=${MATCHING_AUTO_SUBSCRIBE_ENABLED:true}
-integrations.matching.auto-subscriptions[0].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_0:search}
-integrations.matching.auto-subscriptions[0].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_0:test}
-integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:create}
+integrations.matching.auto-subscriptions[0].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_0:catalogue}
+integrations.matching.auto-subscriptions[0].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_0:solicitudes}
+integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:crear}
