--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main, master, tests ]
   pull_request:
 
+permissions:
+  contents: write
+
 jobs:
   backend-tests:
     name: JUnit (Maven)
