--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -338,6 +338,13 @@ jobs:
                   echo "" >> $GITHUB_STEP_SUMMARY
 
 
+      - name: Descargar artefactos de JUnit y k6
+              if: always()
+              uses: actions/download-artifact@v4
+              with:
+                path: ./out
+
+
       - name: Consolidar métricas para gh-pages (tolerante)
         if: always()
         run: |
