modificacion para acomodarse bien a la alta de prestadores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACT
 integrations.matching.auto-subscriptions[1].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_1:catalogue}
 integrations.matching.auto-subscriptions[1].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_1:prestador}
 integrations.matching.auto-subscriptions[1].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_1:alta}
+integrations.matching.auto-subscriptions[1].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_1:alta_prestador}
