Preparacion para publicar seleccion de top 3 prestadores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ integrations.matching.auto-subscriptions[1].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_
 integrations.matching.auto-subscriptions[1].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_1:prestador}
 integrations.matching.auto-subscriptions[1].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_1:alta}
 integrations.matching.auto-subscriptions[1].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_1:alta_prestador}
+integrations.matching.publish-enabled=${MATCHING_PUBLISH_ENABLED:true}
+integrations.matching.publish-path=${MATCHING_PUBLISH_PATH:/publish}
+integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:matching}
+integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:matching.solicitud.top3}
+integrations.matching.publish-top3-event-name=${MATCHING_PUBLISH_TOP3_EVENT_NAME:invitar_top3}
