--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,7 @@ integrations.matching.auto-subscriptions[1].event-name=${MATCHING_AUTO_SUBSCRIBE
 integrations.matching.publish-enabled=${MATCHING_PUBLISH_ENABLED:true}
 integrations.matching.publish-path=${MATCHING_PUBLISH_PATH:/publish}
 integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:matching}
-integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:matching.solicitud.top3}
-integrations.matching.publish-top3-event-name=${MATCHING_PUBLISH_TOP3_EVENT_NAME:invitar_top3}
+integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:matching.cotizacion.emitida}
+integrations.matching.publish-top3-event-name=${MATCHING_PUBLISH_TOP3_EVENT_NAME:emitida}
+integrations.matching.publish-cotizaciones-channel=${MATCHING_PUBLISH_COT_CHANNEL:matching.solicitud.emitida}
+integrations.matching.publish-cotizaciones-event-name=${MATCHING_PUBLISH_COT_EVENT:emitida}
