--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,13 +25,36 @@ integrations.matching.api-key=${MATCHING_API_KEY:ch_2f54f2dbfc0f4afd9d07555cc394
 integrations.matching.subscribe-path=${MATCHING_SUBSCRIBE_PATH:/subscribe}
 integrations.matching.ack-path=${MATCHING_ACK_PATH:/messages/{msgId}/ack}
 integrations.matching.auto-subscribe-enabled=${MATCHING_AUTO_SUBSCRIBE_ENABLED:true}
+
 integrations.matching.auto-subscriptions[0].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_0:search}
 integrations.matching.auto-subscriptions[0].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_0:solicitud}
 integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:created}
+
 integrations.matching.auto-subscriptions[1].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_1:catalogue}
 integrations.matching.auto-subscriptions[1].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_1:prestador}
 integrations.matching.auto-subscriptions[1].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_1:alta}
 integrations.matching.auto-subscriptions[1].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_1:alta_prestador}
+
+integrations.matching.auto-subscriptions[2].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_2:catalogue}
+integrations.matching.auto-subscriptions[2].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_2:rubro}
+integrations.matching.auto-subscriptions[2].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_2:alta}
+integrations.matching.auto-subscriptions[2].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_2:alta_rubro}
+
+integrations.matching.auto-subscriptions[3].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_3:catalogue}
+integrations.matching.auto-subscriptions[3].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_3:rubro}
+integrations.matching.auto-subscriptions[3].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_3:modificacion}
+integrations.matching.auto-subscriptions[3].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_3:modificacion_rubro}
+
+integrations.matching.auto-subscriptions[4].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_4:catalogue}
+integrations.matching.auto-subscriptions[4].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_4:zona}
+integrations.matching.auto-subscriptions[4].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_4:alta}
+integrations.matching.auto-subscriptions[4].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_4:alta_zona}
+
+integrations.matching.auto-subscriptions[5].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_5:catalogue}
+integrations.matching.auto-subscriptions[5].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_5:zona}
+integrations.matching.auto-subscriptions[5].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_5:modificacion}
+integrations.matching.auto-subscriptions[5].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_5:modificacion_zona}
+
 integrations.matching.publish-enabled=${MATCHING_PUBLISH_ENABLED:true}
 integrations.matching.publish-path=${MATCHING_PUBLISH_PATH:/publish}
 integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:matching}
