cambio de suscripcion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ integrations.matching.auto-subscribe-enabled=${MATCHING_AUTO_SUBSCRIBE_ENABLED:t
 
 integrations.matching.auto-subscriptions[0].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_0:search}
 integrations.matching.auto-subscriptions[0].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_0:solicitud}
-integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:created}
+integrations.matching.auto-subscriptions[0].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_0:creada}
 
 integrations.matching.auto-subscriptions[1].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_1:catalogue}
 integrations.matching.auto-subscriptions[1].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_1:prestador}
