--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-# server.port=${SERVER_PORT:8080}
-# management.endpoints.web.exposure.include=health,info
-# management.endpoint.health.probes.enabled=true
-# server.forward-headers-strategy=framework
+server.port=${SERVER_PORT:8080}
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+server.forward-headers-strategy=framework
