--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,7 +254,7 @@ jobs:
           printf "| %s | %s | %.4f |\n" "$totalReqs" "$avgP95" "$globalFailRate" >> $GITHUB_STEP_SUMMARY
           
 
-  e2e-tests:
+     e2e-tests:
     name: Cypress E2E
     runs-on: ubuntu-latest
     needs: k6-load
@@ -281,6 +281,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -307,16 +308,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install node-fetch (fix Cypress config)
-        run: npm install node-fetch@2
+      - name: Install reporters
+        run: |
+          npm install mocha mocha-json-reporter
 
       - name: Run Cypress tests
         run: |
           mkdir -p out/cypress
           npx cypress run \
-            --reporter json-stream \
-            --reporter-options "output=out/cypress/results.json" \
-            > cypress.log || true
+            --reporter mocha-json-reporter \
+            --reporter-options output=out/cypress/results.json \
+            | tee cypress.log || true
 
       - name: Subir artefactos Cypress
         uses: actions/upload-artifact@v4
@@ -324,7 +326,7 @@ jobs:
         with:
           name: cypress-results
           path: |
-            out/cypress/
+            out/cypress/results.json
             cypress.log
             cypress/videos/
 
@@ -333,15 +335,12 @@ jobs:
         run: |
           echo "## Cypress E2E Summary" >> $GITHUB_STEP_SUMMARY
           if [ -f "out/cypress/results.json" ]; then
-            # Instalar jq si no está presente
-            sudo apt-get update > /dev/null && sudo apt-get install -y jq > /dev/null
-            
-            # Extraer estadísticas del JSON
-            total=$(jq -s 'map(select(.[0] == "end")) | .[0][1].stats.tests' out/cypress/results.json)
-            passed=$(jq -s 'map(select(.[0] == "end")) | .[0][1].stats.passes' out/cypress/results.json)
-            failed=$(jq -s 'map(select(.[0] == "end")) | .[0][1].stats.failures' out/cypress/results.json)
-            skipped=$(jq -s 'map(select(.[0] == "end")) | .[0][1].stats.pending' out/cypress/results.json)
-            duration=$(jq -s 'map(select(.[0] == "end")) | .[0][1].stats.duration' out/cypress/results.json)
+            sudo apt-get update -y > /dev/null && sudo apt-get install -y jq > /dev/null
+            total=$(jq '.stats.tests' out/cypress/results.json)
+            passed=$(jq '.stats.passes' out/cypress/results.json)
+            failed=$(jq '.stats.failures' out/cypress/results.json)
+            skipped=$(jq '.stats.pending' out/cypress/results.json)
+            duration=$(jq '.stats.duration' out/cypress/results.json)
 
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "| Total | Passed | Failed | Skipped | Duration (ms) |" >> $GITHUB_STEP_SUMMARY
@@ -351,11 +350,12 @@ jobs:
             if [ "$failed" -gt 0 ]; then
               echo "" >> $GITHUB_STEP_SUMMARY
               echo "### ❌ Failed tests" >> $GITHUB_STEP_SUMMARY
-              jq -s 'map(select(.[0] == "test" and .[1].state == "failed")) | .[] | .[1].title' out/cypress/results.json | sed 's/^/- /' >> $GITHUB_STEP_SUMMARY
+              jq -r '.results[].suites[].tests[] | select(.state=="failed") | "- \(.title)"' out/cypress/results.json >> $GITHUB_STEP_SUMMARY
             fi
           else
             echo "_⚠️ No Cypress results found._" >> $GITHUB_STEP_SUMMARY
           fi
+
 
       - name: Descargar artefactos de JUnit y k6
         if: always()
@@ -369,7 +369,7 @@ jobs:
         run: |
           mkdir -p metrics
 
-          # --- JUnit ---
+          # --- 🧪 JUnit ---
           junit_reports_path="artifacts/junit-results"
           if [ -d "$junit_reports_path" ] && [ -n "$(find $junit_reports_path -type f)" ]; then
             totals=$(awk -F'"' '
@@ -392,22 +392,40 @@ jobs:
             echo "{ \"total\": 0, \"failures\": 0, \"errors\": 0, \"skipped\": 0 }" > metrics/junit.json
           fi
 
-          # --- k6 ---
+
+          # --- 📊 k6 ---
           if [ -d "artifacts/k6-summaries" ] && ls artifacts/k6-summaries/*.json >/dev/null 2>&1; then
             jq -s '{tests: .}' artifacts/k6-summaries/*.json > metrics/k6.json
           else
             echo '{ "tests": [] }' > metrics/k6.json
           fi
 
-          # --- Cypress ---
-          if [ -f "artifacts/cypress-results/out/cypress/results.json" ]; then
-            jq -s '.' artifacts/cypress-results/out/cypress/results.json > metrics/cypress.json
+
+          # --- 🧫 Cypress ---
+          CYPRESS_JSON=$(find artifacts/cypress-results -type f -name "results.json" | head -n 1)
+          if [ -n "$CYPRESS_JSON" ]; then
+            echo "📦 Consolidando Cypress desde $CYPRESS_JSON"
+            total=$(jq '.stats.tests' "$CYPRESS_JSON")
+            passed=$(jq '.stats.passes' "$CYPRESS_JSON")
+            failed=$(jq '.stats.failures' "$CYPRESS_JSON")
+            skipped=$(jq '.stats.pending' "$CYPRESS_JSON")
+            duration=$(jq '.stats.duration' "$CYPRESS_JSON")
+            jq -n \
+              --argjson total "$total" \
+              --argjson passed "$passed" \
+              --argjson failed "$failed" \
+              --argjson skipped "$skipped" \
+              --argjson duration "$duration" \
+              '{total: $total, passed: $passed, failed: $failed, skipped: $skipped, duration: $duration}' \
+              > metrics/cypress.json
           else
-            echo '{ "results": [] }' > metrics/cypress.json
+            echo '{ "total": 0, "passed": 0, "failed": 0, "skipped": 0, "duration": 0 }' > metrics/cypress.json
           fi
 
-          # --- Metadata ---
+
+          # --- 🕒 Metadata ---
           echo "{ \"generated_at\": \"$(date -u +%FT%TZ)\", \"commit\": \"${GITHUB_SHA}\", \"branch\": \"${GITHUB_REF_NAME}\" }" > metrics/meta.json
+
 
       - name: Deploy métricas a gh-pages (seguro)
         if: always()
@@ -415,11 +433,9 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
 
-          # Crear una carpeta temporal limpia
           mkdir -p .ghpages-temp
           cp -r metrics/* .ghpages-temp/
 
-          # Inicializar un nuevo repo Git solo para gh-pages
           cd .ghpages-temp
           git init
           git checkout -b gh-pages
@@ -427,5 +443,4 @@ jobs:
           git add .
           git commit -m "📊 Update metrics $(date -u +%FT%TZ)"
 
-          # Pushear usando el token de Actions
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
