--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -341,7 +341,8 @@ jobs:
           echo "## 🧪 Cypress E2E Summary" >> $GITHUB_STEP_SUMMARY
 
           sudo apt-get update -y > /dev/null && sudo apt-get install -y jq > /dev/null
-          CYPRESS_JSON="out/cypress/results.json"
+          CYPRESS_JSON="out/cypress/*.json"
+          mkdir -p metrics
 
           if [ -f "$CYPRESS_JSON" ]; then
             echo "📦 Leyendo resultados desde $CYPRESS_JSON"
