agregado id interno y externo y validacion de alta y modificacion de zona y rubro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,11 @@ integrations.matching.auto-subscriptions[5].domain=${MATCHING_AUTO_SUBSCRIBE_DOM
 integrations.matching.auto-subscriptions[5].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_5:modificacion}
 integrations.matching.auto-subscriptions[5].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_5:modificacion_zona}
 
+integrations.matching.auto-subscriptions[6].team=${MATCHING_AUTO_SUBSCRIBE_TEAM_6:catalogue}
+integrations.matching.auto-subscriptions[6].domain=${MATCHING_AUTO_SUBSCRIBE_DOMAIN_6:prestador}
+integrations.matching.auto-subscriptions[6].action=${MATCHING_AUTO_SUBSCRIBE_ACTION_6:modificacion}
+integrations.matching.auto-subscriptions[6].event-name=${MATCHING_AUTO_SUBSCRIBE_EVENT_6:modificacion_prestador}
+
 integrations.matching.publish-enabled=${MATCHING_PUBLISH_ENABLED:true}
 integrations.matching.publish-path=${MATCHING_PUBLISH_PATH:/publish}
 integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:matching}
