--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -404,13 +404,27 @@ jobs:
 
 
           # --- 🧫 Cypress ---
-          CYPRESS_JSON="artifacts/cypress-results/out/cypress/results.json"
-          if [ -f "$CYPRESS_JSON" ]; then
-            total=$(jq '[.results[].suites[].tests[]] | length' "$CYPRESS_JSON")
-            passed=$(jq '[.results[].suites[].tests[] | select(.state=="passed")] | length' "$CYPRESS_JSON")
-            failed=$(jq '[.results[].suites[].tests[] | select(.state=="failed")] | length' "$CYPRESS_JSON")
-            skipped=$(jq '[.results[].suites[].tests[] | select(.state=="pending" or .state=="skipped")] | length' "$CYPRESS_JSON")
-            duration=$(jq '[.results[].suites[].tests[].duration // 0] | add' "$CYPRESS_JSON")
+          CYPRESS_JSON=$(find artifacts/cypress-results -type f -name "results.json" | head -n 1)
+
+          if [ -n "$CYPRESS_JSON" ]; then
+            echo "📊 Procesando métricas desde $CYPRESS_JSON"
+
+            has_stats=$(jq 'has("stats")' "$CYPRESS_JSON")
+            if [ "$has_stats" = "true" ]; then
+              echo "✅ Usando estructura con .stats"
+              total=$(jq '.stats.tests // 0' "$CYPRESS_JSON")
+              passed=$(jq '.stats.passes // 0' "$CYPRESS_JSON")
+              failed=$(jq '.stats.failures // 0' "$CYPRESS_JSON")
+              skipped=$(jq '.stats.pending // 0' "$CYPRESS_JSON")
+              duration=$(jq '.stats.duration // 0' "$CYPRESS_JSON")
+            else
+              echo "✅ Usando estructura con .results[].suites[].tests[]"
+              total=$(jq '[.results[].suites[].tests[]] | length' "$CYPRESS_JSON")
+              passed=$(jq '[.results[].suites[].tests[] | select(.state=="passed")] | length' "$CYPRESS_JSON")
+              failed=$(jq '[.results[].suites[].tests[] | select(.state=="failed")] | length' "$CYPRESS_JSON")
+              skipped=$(jq '[.results[].suites[].tests[] | select(.state=="pending" or .state=="skipped")] | length' "$CYPRESS_JSON")
+              duration=$(jq '[.results[].suites[].tests[].duration // 0] | add' "$CYPRESS_JSON")
+            fi
 
             jq -n \
               --argjson total "$total" \
@@ -420,8 +434,11 @@ jobs:
               --argjson duration "$duration" \
               '{total: $total, passed: $passed, failed: $failed, skipped: $skipped, duration: $duration}' \
               > metrics/cypress.json
+
+            echo "✅ Métricas guardadas en metrics/cypress.json:"
+            cat metrics/cypress.json
           else
-            echo "⚠️ No se encontró $CYPRESS_JSON, generando métricas vacías para Cypress."
+            echo "⚠️ No se encontró results.json, generando métricas vacías."
             echo '{ "total": 0, "passed": 0, "failed": 0, "skipped": 0, "duration": 0 }' > metrics/cypress.json
           fi
 
