--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -412,14 +412,12 @@ jobs:
 
             has_stats=$(jq 'has("stats")' "$CYPRESS_JSON")
             if [ "$has_stats" = "true" ]; then
-              echo "✅ Usando estructura con .stats"
               total=$(jq '.stats.tests // 0' "$CYPRESS_JSON")
               passed=$(jq '.stats.passes // 0' "$CYPRESS_JSON")
               failed=$(jq '.stats.failures // 0' "$CYPRESS_JSON")
               skipped=$(jq '.stats.pending // 0' "$CYPRESS_JSON")
               duration=$(jq '.stats.duration // 0' "$CYPRESS_JSON")
             else
-              echo "✅ Usando estructura con .results[].suites[].tests[]"
               total=$(jq '[.results[].suites[].tests[]] | length' "$CYPRESS_JSON")
               passed=$(jq '[.results[].suites[].tests[] | select(.state=="passed")] | length' "$CYPRESS_JSON")
               failed=$(jq '[.results[].suites[].tests[] | select(.state=="failed")] | length' "$CYPRESS_JSON")
@@ -427,20 +425,30 @@ jobs:
               duration=$(jq '[.results[].suites[].tests[].duration // 0] | add' "$CYPRESS_JSON")
             fi
 
+            # 👇 Mapea el resumen por spec
+            summary=$(jq -c '[.results[] | {spec: .file, 
+                                            tests: ([.suites[].tests[]] | length), 
+                                            passed: ([.suites[].tests[] | select(.state=="passed")] | length), 
+                                            failed: ([.suites[].tests[] | select(.state=="failed")] | length), 
+                                            skipped: ([.suites[].tests[] | select(.state=="pending" or .state=="skipped")] | length)
+                                          }]' "$CYPRESS_JSON")
+
+            # 👇 Guarda todo junto en metrics/cypress.json
             jq -n \
               --argjson total "$total" \
               --argjson passed "$passed" \
               --argjson failed "$failed" \
               --argjson skipped "$skipped" \
               --argjson duration "$duration" \
-              '{total: $total, passed: $passed, failed: $failed, skipped: $skipped, duration: $duration}' \
+              --argjson summary "$summary" \
+              '{total: $total, passed: $passed, failed: $failed, skipped: $skipped, duration: $duration, summary: $summary}' \
               > metrics/cypress.json
 
-            echo "✅ Métricas guardadas en metrics/cypress.json:"
+            echo "✅ Métricas completas guardadas en metrics/cypress.json"
             cat metrics/cypress.json
           else
             echo "⚠️ No se encontró results.json, generando métricas vacías."
-            echo '{ "total": 0, "passed": 0, "failed": 0, "skipped": 0, "duration": 0 }' > metrics/cypress.json
+            echo '{ "total": 0, "passed": 0, "failed": 0, "skipped": 0, "duration": 0, "summary": [] }' > metrics/cypress.json
           fi
 
 
